Fix overflow dental

--- a/scss/_default.scss
+++ b/scss/_default.scss
@@ -1084,12 +1084,14 @@ p {
   display: flex;
   flex-direction: column;
   justify-content: center;
+  max-width: 100vw;
 }
 .dental-graphic {
   max-width: 100vw;
 }
 .dental-graphic-1 {
   align-self: flex-end;
+  max-width: 100vw;
   // padding-bottom: -20px;
 }
 .dental-graphic-2 {
