--- a/scss/year_in_review.styles.css
+++ b/scss/year_in_review.styles.css
@@ -972,6 +972,7 @@ p {
   display: flex;
   flex-direction: column;
   justify-content: center;
+  max-width: 100vw;
 }
 
 .dental-graphic {
@@ -980,6 +981,7 @@ p {
 
 .dental-graphic-1 {
   align-self: flex-end;
+  max-width: 100vw;
 }
 
 .dental-graphic-2 {
